# notif1

./: BUILD.md  FIRMWARE.md  QUICKSTART.md  README.md
v5/: Cargo.toml
v5/scripts/: build-all-v5.sh  build-linux-v5.sh  build-windows-v5.sh
v5/src/rust/common-v5/: Cargo.toml  README.md  debug_rgb565.rs
v5/src/rust/common-v5/src/: error.rs  lib.rs  protocol.rs  text.rs  ui.html
v5/src/rust/common-v5/src/api/: handlers.rs  mod.rs  models.rs
v5/src/rust/common-v5/src/bluetooth/: manager.rs  mod.rs  traits.rs
v5/src/rust/common-v5/src/config/: mod.rs
v5/src/rust/common-v5/src/image/: formats.rs  mod.rs  processor.rs  rgb565.rs
v5/src/rust/common-v5/src/mcp/: handler.rs  mod.rs  session.rs
v5/src/rust/common-v5/src/mcp/prompts/: mod.rs  progress_bar.rs  status_display.rs
v5/src/rust/common-v5/src/mcp/resources/: connection_status.rs  device_state.rs  mod.rs
v5/src/rust/common-v5/src/mcp/tools/: devices.rs  draw.rs  mod.rs  send.rs  status.rs
v5/src/rust/linux-v5/: Cargo.toml  build.rs
v5/src/rust/linux-v5/src/: bluetooth_impl.rs  main.rs  platform.rs
v5/src/rust/windows-v5/: Cargo.toml  build.rs
v5/src/rust/windows-v5/.cargo/: config  config.toml
v5/src/rust/windows-v5/src/: bluetooth_impl.rs  main.rs  platform.rs
