[workspace]
resolver = "2"
members = [
    "src/rust/common-v5",
    "src/rust/windows-v5",
    "src/rust/linux-v5",
]

[workspace.dependencies]
# Core
tokio = { version = "1.35", features = ["full"] }
actix-web = "4.4"
anyhow = "1.0"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
actix-cors = "0.6"

# Image processing
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "gif", "bmp"] }

# HTTP
reqwest = { version = "0.11", features = ["stream", "native-tls"] }
actix-multipart = "0.6"
actix-files = "0.6"

# Cache
lru = "0.12"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# Bluetooth
btleplug = "0.11"

# Config
config = "0.14"
toml = "0.8"
serde_yaml = "0.9"

# UUID
uuid = { version = "1.6", features = ["v4"] }

# Async utilities
futures = "0.3"

# Platform-specific dependencies
windows = { version = "0.52", features = ["Win32_System", "Win32_Security", "Win32_Networking"] }
nix = "0.27"
libc = "0.2"