[package]
name = "notif-common-v5"
version = "5.0.0"
edition = "2021"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
serde_yaml = "0.9"

# Error handling
thiserror = "1"
anyhow = "1"

# Logging
tracing = "0.1"

# Image processing
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "gif", "bmp"] }
base64 = "0.22"

# HTTP processing (v5新機能)
reqwest = { version = "0.11", features = ["stream", "rustls-tls"], default-features = false, optional = true }
actix-multipart = { version = "0.6", optional = true }
actix-files = { version = "0.6", optional = true }
futures-util = { version = "0.3", optional = true }

# Utilities
uuid = { version = "1", features = ["v4"] }
futures = "0.3"
chrono = "0.4"

# Web framework (for API models)
actix-web = "4"
actix-web-lab = "0.20"  # SSE support for MCP

[features]
default = []
mock = []  # モックテスト用フィーチャー

# v5新機能（オプション）
http-endpoints = ["dep:reqwest", "dep:actix-multipart", "dep:actix-files", "dep:futures-util"]