[package]
name = "notif-v5-linux"
version = "5.0.0"
edition = "2021"
build = "build.rs"

[[bin]]
name = "notif-server-v5"
path = "src/main.rs"

[features]
default = ["http-endpoints"]
http-endpoints = ["notif-common-v5/http-endpoints"]

[dependencies]
# 共通ライブラリ（MCP含む、画像処理機能有効）
notif-common-v5 = { path = "../common-v5", features = ["http-endpoints"] }

# Web framework
actix-web = "4"
actix-cors = "0.7"
actix-web-lab = "0.20"
# v5新規追加（画像処理用）
actix-multipart = "0.6"
actix-files = "0.6"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Bluetooth (Linux固有)
btleplug = "0.11"
uuid = { version = "1", features = ["v4"] }

# Error handling
thiserror = "1"
anyhow = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# System
futures = "0.3"
async-trait = "0.1"
libc = "0.2"
chrono = "0.4"

[build-dependencies]
chrono = "0.4"

[dev-dependencies]
actix-web-httpauth = "0.8"
mockall = "0.11"